Fix: resolve overflow svg about

--- a/public/global.css
+++ b/public/global.css
@@ -35,6 +35,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
+  max-width: 100vw;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
